--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,8 +29,15 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    buildFeatures {
+
+        viewBinding = true
+    }
     compileSdkVersion 31
     buildToolsVersion '31.0.0'
+
+
+
 }
 
 dependencies {
